# vland

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_env.m
config/: l4t_dfs.conf
cvx/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
scripts/: set_acado_path.m  work_cache.m
sim3dof/: get_problem.m  get_symgen_step.m  model_test.m  model_test_acado.m  mpc.cpp  sim.cpp  sim_acado_rocket.m  symbolic_model.m
sim3dof/export_MPC/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
sim3dof/export_SIM/: acado_common.h  acado_compare.c  acado_integrator.c
sim6dof/: get_symgen_step_6dof.m  init_params_6dof.m  model_test_6dof.m  model_test_acado_6dof.m  quat2dcm_sym.m  quatconj_sym.m  quatinv_sym.m  quatmultiply_sym.m  quatrotate_sym.m  sim_acado_rocket_6dof.m  symbolic_model_6dof.m  test_quaternions_.m
sim6dof/export_MPC/: acado_common.h  acado_integrator.c  acado_qpoases_interface.hpp  acado_solver.c
sim6dof/export_SIM/: acado_common.h  acado_integrator.c
simulink_models/: raxay2xyz.m  rzaxay2xyz.m  sim_params.m  test_integration.slx  vland_sim.slx
solver/: get_simulate.m
src/: main.cpp
vland-DEBIAN/: control
